Reporting: Übergabe von Parametern an Reportvorlagen.
Co-authored-by: Michael <michael.pluemper@br.nrw.de>